# sqlite3-pb-ext-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sqlite3_pb_ext_deps.cmake
.github/: FUNDING.yml
proto/: addressbook.proto  gen
src/: main.cpp
